# aoc_bazel

./: .bazelrc  .clang-format  .envrc  .gitignore  BUILD  MODULE.bazel  README.md  extensions.bzl  tools.lock.json
aoc/: defs.bzl
aoc/private/: day.bzl  year.bzl
hack/: bootstrap_repo_tools.sh
hack/scripts/: install_direnv.sh
tools/: BUILD  aoc_year.bzl  extensions.bzl
years/2024/day1/: BUILD  day1.cc
years/2025/day1/: BUILD  day1.cc  day1_scratch.cc  sample_input_over.txt
years/2025/src/dial/: BUILD  dial.cc  dial.h  dial.hpp  dial_test.cc
years/2025/src/files/: BUILD  files.cc  files.hpp
years/2025/src/product/: BUILD  product.cc  product.hpp  product_test.cc
