module(
    name = "aoc_2025",
    version = "0.0.0",
)

bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "rules_multitool", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.5.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:tools.lock.json")
use_repo(multitool, "multitool")

aoc_input = use_extension("//tools:extensions.bzl", "aoc_puzzle_input")
aoc_input.use_year(
    cookie_file = "//:.aoc_cookie",
    year = 2024,
)
aoc_input.use_year(
    cookie_file = "//:.aoc_cookie",
    year = 2023,
)
use_repo(aoc_input, "aoc2023", "aoc2024")
